# roundabout

./: .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml
roundabout/: __init__.py  _core.py  utils.py
tests/: test_roundabout.py
