[tool.poetry]
name = "roundabout"
version = "0.1.0"
description = "Visualize matrices as chord diagrams aka radial network graphs"
authors = ["Peter Kalverla <peter@kalversweep.nl>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""
documentation = ""
keywords = ["chord diagram", "matplotlib", "radial network graph"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
